Попытался изменить для того чтоб картинка подгружалась, и начал использовать "url_for"

--- a/templates/post_uploaded.html
+++ b/templates/post_uploaded.html
@@ -8,18 +8,19 @@
 <body>
 <main>
 
-    <a href="/" class="link">Назад</a>
+    <a href="{{ url_for("main_blueprint.main_page") }}" class="link">Назад</a>
 
     <h1>Пост добавлен! </h1>
 
     <div class="post">
-        <img src="{{ filename }}" width="100%" alt="Я честно не знаю почему картинка не подгружается">
+        {% set path = 'images/' + filename %}
+        <img src="{{ url_for('loader_blueprint.static_dir', path=path) }}" width="100%" alt="Я честно не знаю почему картинка не подгружается">
         <p>{{ content }}</p>
     </div>
 
     <hr>
 
-    <a href="/create_post/" class="button">Добавить еще пост</a>
+    <a href="{{ url_for('loader_blueprint.page_post_form')}}" class="button">Добавить еще пост</a>
 
 </main>
 </body>
